# DRONE

./: .gitignore  EBV_mpi  EBV_mpi.cpp  README.md  go.mod
DRONE/sbin/: DRONE_start  DRONE_start.cpp  config.txt
DRONE/src/: DRONE_start  cc.go  cc_cuda.go  config.txt  master.go  nccl.id  pr.go  pr_cuda.go  sssp.go  test.go
DRONE/src/Set/: Set.go
DRONE/src/algorithm/: CC.go  PageRank.go  SSSP.go
DRONE/src/cuda/: CMakeLists.txt  graph.cu  graph.h  library.cu  library.cuh  main.go
DRONE/src/cuda/algorithm/: cc.cu  cc.h  common.cu  common.h  pr.cu  pr.h  sssp.cu  sssp.h
DRONE/src/cuda/algorithm/gcn/: gcn.h
DRONE/src/cuda/algorithm/gcn/cuda/: cuda_module.cuh
DRONE/src/graph/: cuda_graph.go  graph.go
DRONE/src/protobuf/: master_service.pb.go  worker_service.pb.go  worker_service.proto
DRONE/src/tools/: Settings.go  cuda_convert.go
DRONE/src/worker/: CCworker.go  CCworkerCUDA.go  PRWorker.go  PRWorkerCUDA.go  SSSPworker.go  SSSPworkerCUDA.go
cuda_gcn/: CMakeLists.txt
cuda_gcn/src/: gcn.cu  gcn.cuh  main.cpp  main.cu  test.go
cuda_gcn/src/common/: parser.cu  parser.h  parserNew.cu  timer.cu  timer.h  utils.cu  utils.h
cuda_gcn/src/cuda/: cuda_cache.cu  cuda_cache.cuh  cuda_communicate.cu  cuda_communicate.cuh  cuda_compress.cu  cuda_compress.cuh  cuda_gcn.cu  cuda_gcn.cuh  cuda_kernel.cu  cuda_kernel.cuh  cuda_module.cu  cuda_module.cuh  cuda_variable.cu  cuda_variable.cuh  graph.cu  graph.h  seq.cu  seq.h
cuda_gcn/src/tools/: EBV_1Pass.cpp  EBV_BFS.cpp  EBV_hierarchical.cpp  EBV_merge.cpp  EBV_mpi.cpp  EBV_seq.cpp  add_self_loop.cpp  graphTransfer.cpp  nccl_speed.cu  sparse.cu  sparseTest.cu  splitTransfer.cpp  test.cpp  test.cu  testDirected.cpp
